[package]
name = "jilu"
version = "0.2.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "Generate a change log based on conventional commits."
repository = "https://github.com/rustic-games/jilu"
keywords = ["changelog", "git", "conventional-commits", "release"]
categories = ["command-line-utilities", "development-tools", "template-engine"]
readme = "README.md"
edition = "2018"

[dependencies]
Inflector = { version = "0.11", default-features = false }
boolinator = "2"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
conventional = "0.3"
git2 = { version = "0.9", default-features = false }
lazy_static = "1"
ron = "0.5"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tera = { version = "1.1.0", features = ["preserve_order"] }
