[package]
name = "jilu"
version = "0.4.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "Generate a change log based on conventional commits."
repository = "https://github.com/rustic-games/jilu"
keywords = ["changelog", "git", "conventional-commits", "release"]
categories = ["command-line-utilities", "development-tools", "template-engine"]
readme = "README.md"
edition = "2018"

[dependencies]
Inflector = { version = "0.11", default-features = false }
boolinator = { version = "2", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "serde",
] }
conventional = { version = "0.5", default-features = false }
git2 = { version = "0.20", default-features = false }
lazy_static = { version = "1", default-features = false }
ron = { version = "0.10", default-features = false, features = ["indexmap"] }
semver = { version = "1", default-features = false, features = [
  "std",
  "serde",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
tera = { version = "1.1.0", default-features = false, features = [
  "builtins",
  "preserve_order",
] }
