[package]
name = "jilu"
version = "0.10.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "Generate a change log based on conventional commits."
repository = "https://github.com/rustic-games/jilu"
keywords = ["changelog", "git", "conventional-commits", "release"]
categories = ["command-line-utilities", "development-tools", "template-engine"]
readme = "README.md"
edition = "2018"
rust-version = "1.70"

[dependencies]
Inflector = { version = "0.11", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "serde",
] }
conventional = { version = "0.5", default-features = false }
git2 = { version = "0.20", default-features = false }
lazy_static = { version = "1", default-features = false }
ron = { version = "0.10", default-features = false, features = ["indexmap"] }
semver = { version = "1", default-features = false, features = [
  "std",
  "serde",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = [
  "std",
  "preserve_order",
] }
jaq-core = { version = "2", default-features = false, features = ["std"] }
jaq-json = { version = "1", default-features = false, features = [
  "parse",
  "serde_json",
] }
jaq-std = { version = "2", default-features = false, features = ["default"] }
url = { version = "2", default-features = false }
tempfile = { version = "3", default-features = false }
lexopt = { version = "0.3", default-features = false }
tera = { version = "1", default-features = false, features = [
  "builtins",
  "preserve_order",
] }
